<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ecf0f1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SMS"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_gravity="top"
        android:layout_alignParentEnd="false"
        android:textSize="32sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/InputTo"
        android:labelFor="@+id/InputTo"
        android:inputType="text"
        android:text="@string/smsNum"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar"
        android:id="@+id/btnEnviar"
        android:textSize="18sp"
        android:background="#71c9ff"
        android:textColor="#fff"
        android:layout_above="@+id/btnVoltar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVoltar"
        android:id="@+id/btnVoltar"
        android:textSize="18sp"
        android:background="#a94ef6"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/InputMessage"
        android:labelFor="@+id/InputMessage"
        android:text="@string/smsCorpo"
        android:inputType="text"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/smsMensagem"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/InputMessage"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/smsPara"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/InputTo"  />

</RelativeLayout>
