<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ecf0f1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sobre"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_gravity="top"
        android:layout_alignParentEnd="false"
        android:textSize="32sp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVoltar"
        android:id="@+id/btnVoltar"
        android:textSize="18sp"
        android:background="#a94ef6"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/github"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:maxHeight="10dp"
        android:minHeight="0dp"
        android:maxWidth="20dp"
        android:id="@+id/btnGit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/descricao" />

    <TextView
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewSobre"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:clickable="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="41dp"
        android:layout_alignTop="@+id/btnGit"
        android:layout_toEndOf="@+id/btnGit"
        android:layout_marginStart="13dp" />

</RelativeLayout>
